[project]
name = "suaidoc"
version = "0.2.3-beta1"
dependencies = [
	"click", 
	"pdfkit", 
	"python_frontmatter",
]
description = "CLI for generating reports according to GOST 7.32 from Markodwn",
authors = [
	{name = "Vlad Vorobew", email = "razrab.ytka@gmail.com"}
]
mainteiners = [
	{name = "Vlad Vorobew", email = "razrab.ytka@gmail.com"}
]
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Utilities",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Software Development :: Documentation",
]
keywords = ["cli", "university", "gost", "docs", "pdf", "generating" ,"suai"]

[project.urls]
Homepage = "https://github.com/vladcto/suaidoc"
Repository = "https://github.com/vladcto/suaidoc.git"
Issues = "https://github.com/vladcto/suaidoc/issues"
Changelog = "https://github.com/vladcto/suaidoc/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["suaidoc"]

[project.scripts]
suaidoc = "suaidoc:suaidoc"
